example/deployment-devel.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: decco-operator-devel
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: decco-operator-devel
    spec:
      serviceAccountName: decco-operator
      containers:
      - name: decco-operator
        securityContext:
          privileged: true
          capabilities:
            add:
              - SYS_ADMIN
        image: platform9systems/decco-operator-devel
