example/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: decco-operator
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: decco-operator
    spec:
      serviceAccountName: decco-operator
      containers:
      - name: decco-operator
        image: platform9systems/decco-operator
