example/http_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: http-ingress-example
spec:
  rules:
  - host: fedtime-http-on-gke-1.platform9.horse
    http:
      paths:
      - backend:
          serviceName: fedtime4
          servicePort: 80
        path: /time
  tls:
  - hosts:
    - fedtime-http-on-gke-1.platform9.horse
    secretName: pf9-horse-secret
