example/k8sniff_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: k8sniff
  name: fedtime-tls
spec:
  rules:
  - host: fedtime-tls-on-gke-1.platform9.horse
    http:
      paths:
      - backend:
          serviceName: fedtime-tls
          servicePort: 443
